fix: also set colors in base.css, seems it breaks in prod mode

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -11,6 +11,25 @@
   --accents-6: #444;
   --accents-7: #333;
   --accents-8: #111;
+
+  --poke-normal: #A8A77A;
+  --poke-fire: #EE8130;
+  --poke-water: #6390F0;
+  --poke-electric: #F7D02C;
+  --poke-grass: #7AC74C;
+  --poke-ice: #96D9D6;
+  --poke-fighting: #C22E28;
+  --poke-poison: #A33EA1;
+  --poke-ground: #E2BF65;
+  --poke-flying: #A98FF3;
+  --poke-psychic: #F95587;
+  --poke-bug: #A6B91A;
+  --poke-rock: #B6A136;
+  --poke-ghost: #735797;
+  --poke-dragon: #6F35FC;
+  --poke-dark: #705746;
+  --poke-steel: #B7B7CE;
+  --poke-fairy: #D685AD;
 }
 
 *,
